resolved a NavBar issue. Styled NavBar for home screen to allow for more visibility while overlayed on brighter background images. Styled NavBar for all other pages.

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,4 +1,6 @@
 .nav_container {
+    display: flex;
+    justify-content: center;
     padding: 0;
     margin: 0, auto;
     height: 700px;
@@ -10,24 +12,51 @@
 }
 
     .nav_container.other {
+        display: flex;
+        justify-content: center;
         padding: 0;
         margin: 0, auto;
         height: 85px;
         width: 100%;
         background-color: #ffffff;
-        background-size: cover;
-        background-position: 50%;
+        /* background-size: cover; */
+        /* background-position: 50%; */
         border-bottom: 1px solid rgb(235,235,235);
-        /* position: fixed; */
     }
 
+.nav-gradient {
+    width: 100%;
+    height: 90px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.446), rgba(0, 0, 0, 0.208), rgba(0, 0, 0, 0));
+}
+
+    .nav-gradient.other {
+        display: flex;
+        justify-content: center;
+        height: 90px;
+        width: 100%;
+        background: white;
+    }
 
 .li-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 100%;
+    height: 90px;
+    max-width: 100%;
+    position: sticky;
 }
+
+    .li-container.other{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        height: 86px;
+        width: 100%;
+        background: white;
+        min-width: 1025px;
+        position: fixed;
+    }
 
 .nav_container_homelink {
     display: flex;
@@ -81,16 +110,14 @@
     align-items: center;
     width: 600px;
     height: 100%;
-    background: orange;
 }
 
     .middle-container #upper-middle {
         display: flex;
         flex-direction: column;
-
         width: 100%;
-        height: 100%;
-        background: green;
+        height: 90px;
+        z-index: 2;
     }
 
 .search-bar-container {
@@ -102,6 +129,7 @@
     /* margin-top: 1.2rem; */
     padding: 0;
     /* position: fixed; */
+
 }
 
 .search-bar-main {
@@ -244,9 +272,7 @@
     align-items: center;
     width: 100%;
     max-height: 300px;
-    /* z-index: 2; */
-
-    background-color: rgb(242, 149, 11);
+    z-index: 2;
 }
 
     .restaurant-search-results-container {
@@ -258,8 +284,6 @@
         max-height: 300px;
         overflow-x: hidden;
         overflow-y: auto;
-        /* z-index: -2; */
-
         background-color: rgb(255, 255, 255);
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
@@ -337,7 +361,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 31%;
+    min-width: 450px;
     height: 5.4rem;
     padding-left: 0;
     margin-left: 0;
